force-app/main/default/src/objects/PJN_Metric_Type__c/PJN_Metric_Type__c.object-meta.xml
<CustomObject>
    <description>Header information describing what the metric value indicates.</description>
    <label>Metric Type</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Metric Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metric Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>