force-app/main/default/src/objects/PJN_Metric_Type__c/fields/PJN_Active__c.field-meta.xml
<CustomField>
    <fullName>PJN_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates this metric type is available for display and use</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>