force-app/main/default/src/objects/PJN_Metric_Type__c/fields/PJN_Description__c.field-meta.xml
<CustomField>
    <fullName>PJN_Description__c</fullName>
    <description>Describes what this Metric Type means. Displayed on the Medical History Metric Type components</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Describes what this Metric Type means. Displayed on the Medical History Metric Type components</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>