force-app/main/default/src/objects/PJN_Metric_Type__c/fields/PJN_External_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_External_Id__c</fullName>
    <description>External id of the metric type. Facilitates Data migration</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>External id of the metric type. Facilitates Data migration</inlineHelpText>
    <label>External Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>