force-app/main/default/src/objects/PJN_Metric_Type__c/fields/PJN_Metric_Group__c.field-meta.xml
<CustomField>
    <fullName>PJN_Metric_Group__c</fullName>
    <description>The group this type is categorized under</description>
    <inlineHelpText>The group this type is categorized under</inlineHelpText>
    <label>Metric Group</label>
    <referenceTo>PJN_Metric_Group__c</referenceTo>
    <relationshipLabel>Metric Types</relationshipLabel>
    <relationshipName>PJN_Metric_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>