force-app/main/default/src/objects/PJN_Metric_Type__c/fields/PJN_Show_Trend__c.field-meta.xml
<CustomField>
    <fullName>PJN_Show_Trend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display data in a chart in addition to the list</description>
    <label>Show Trend</label>
    <type>Checkbox</type>
</CustomField>