force-app/main/default/src/objects/PJN_Metric_Type__c/fields/PJN_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Type__c</fullName>
    <description>Indicates the type of metric. Used for rendering correct inputs in the capture metric component.</description>
    <inlineHelpText>Indicates the type of metric. Used for rendering correct inputs in the capture metric component.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>