force-app/main/default/src/objects/PJN_Metric_Type__c/fields/PJN_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>PJN_Unit_of_Measure__c</fullName>
    <description>The unit of measurement for the metric.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The unit of measurement for the metric.</inlineHelpText>
    <label>Unit of Measure</label>
    <length>10</length>
    <type>Text</type>
</CustomField>